# nb-cli

./: .gitignore  AGENTS.md  Cargo.toml  README.md  dev-env.sh  install.sh  justfile  requirements.txt
.agents/skills/notebook-cli/: SKILL.md
.config/: nextest.toml
.github/workflows/: build-preview.yml  prep-release.yml  release.yml  rust.yml
examples/: USO_forecast.ipynb  data_analysis.ipynb  sales_analysis.ipynb  sample-create.ipynb  sample.ipynb  test_exec.ipynb  test_state.ipynb
examples/data/: sales_data.csv
proptest-regressions/execution/remote/: websocket.txt
scripts/: execute_batch.py  execute_code.py
skills/notebook-cli/: SKILL.md
skills/notebook-cli/agents/: openai.yaml
skills/notebook-cli/references/: best-practices.md  connect-mode.md  create.md  edit-cells.md  execute.md  output-format.md  read.md  validation-prompts.md
src/: debug_collab.rs  main.rs  notebook.rs
src/commands/: add_cell.rs  check_session.rs  clean_output_dirs.rs  clear_outputs.rs  common.rs  connect.rs  create_notebook.rs  debug_collab.rs  delete_cell.rs  env_manager.rs  execute_cell.rs  execute_notebook.rs  markdown_renderer.rs  mod.rs  read.rs  search.rs  self_cmd.rs  status.rs  update_cell.rs  view.rs
src/commands/cell/: add.rs  delete.rs  update.rs
src/commands/connection/: connect.rs  disconnect.rs  status.rs
src/commands/output/: clean.rs  clear.rs  markdown_renderer.rs  mod.rs
src/commands/view/: app.rs  highlight.rs  markdown.rs  mod.rs  ui.rs
src/config/: mod.rs
src/execution/: env.rs  mod.rs  output_collector.rs  types.rs
src/execution/gateway/: executor.rs  mod.rs
src/execution/local/: discovery.rs  executor.rs  mod.rs
src/execution/remote/: client.rs  mod.rs  output_conversion.rs  session_check.rs  websocket.rs  ydoc.rs  ydoc_notebook_ops.rs
src/execution/remote_kernel/: executor.rs
src/execution/server/: client.rs  kernel_ws_execution.rs  mod.rs  websocket.rs  ydoc.rs  ydoc_execution.rs  ydoc_notebook_ops.rs
src/notebook/: local.rs  mod.rs  remote.rs  session.rs
tests/: README.md  integration_connect_config.rs  integration_connect_mode.rs  integration_env_kernels.rs  integration_execution.rs  integration_local_mode.rs  integration_sanity_large.rs  integration_sanity_large_connect.rs  requirements.txt  setup_test_env.sh  test_helpers.rs
tests/fixtures/: for_connect_cell_selection.ipynb  for_connect_error_stop.ipynb  for_connect_long_running.ipynb  for_connect_neg_index.ipynb  for_connect_restart.ipynb  for_connect_timeout.ipynb  for_execution.ipynb  large_heavy_output.ipynb  large_stateful.ipynb  large_with_error.ipynb  legacy_v3.ipynb  legacy_v44.ipynb  with_error.ipynb  with_rich_outputs.ipynb
