[package]
name = "jupyter-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nbformat = "1.2"
jupyter-protocol = "1.4"
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
uuid = { version = "1.10", features = ["v4", "serde"] }

# Local mode dependencies
tempfile = "3.8"
dirs = "5.0"

# Remote mode dependencies
reqwest = { version = "0.11", features = ["json"] }
tokio-tungstenite = "0.21"
futures-util = "0.3"

# Shared async runtime
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
