[package]
name = "nb-cli"
version = "0.0.2"
edition = "2021"
description = "A command-line tool for reading, writing, and executing Jupyter notebooks"
authors = ["Project Jupyter <jupyter@googlegroups.com>"]
license = "BSD-3-Clause"
repository = "https://github.com/jupyter-ai-contrib/nb-cli"
homepage = "https://github.com/jupyter-ai-contrib/nb-cli"
keywords = ["jupyter", "notebooks", "cli", "ai"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "nb"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nbformat = "1.2"
jupyter-protocol = "1.4"
runtimelib = { version = "1.5", features = ["tokio-runtime"] }
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
uuid = { version = "1.10", features = ["v4", "serde"] }
regex = "1.10"

# Local mode dependencies
tempfile = "3.8"
dirs = "5.0"

# Connect command dependencies
dialoguer = "0.11"
chrono = { version = "0.4", features = ["serde"] }

# Remote mode dependencies
reqwest = { version = "0.11", features = ["json", "native-tls-vendored"] }
tokio-tungstenite = "0.21"
futures-util = "0.3"
url = "2.5"

# Y.js CRDT support for real-time document synchronization
yrs = "0.21"

# Shared async runtime
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"

# View command dependencies
ratatui = "0.28"
crossterm = "0.28"
syntect = "5.2"
notify = "6.1"
